<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@color/white"
    android:clipToPadding="true"
    tools:context=".WalletActivity">

    <!--    <TextView-->
    <!--        android:id="@+id/TV_titleHistory"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="61dp"-->
    <!--        android:fontFamily="@font/inter"-->
    <!--        android:text="@string/historylabel_wallet"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="20sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.176"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/TV_walletReminder" />-->

    <ImageView
        android:id="@+id/background6"
        android:layout_width="413dp"
        android:layout_height="728dp"
        android:alpha="0.3"
        android:background="#ffffff"
        android:scaleType="fitCenter"
        android:src="@drawable/backgroundjomride"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/BtnBack_WalletHome"
        android:layout_width="56dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="back button"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LL_Wallet"
        android:layout_width="354dp"
        android:layout_height="277dp"
        android:background="@drawable/popup"
        android:orientation="vertical"
        android:paddingStart="45dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428">


        <TextView
            android:id="@+id/TV_Wtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:includeFontPadding="true"
            android:paddingTop="10dp"
            android:text="@string/current_balance_wallet"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TV_WRM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:fontFamily="@font/inter"
                android:gravity="start"
                android:includeFontPadding="true"
                android:paddingEnd="5dp"
                android:paddingBottom="1dp"
                android:text="@string/rm_topup"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_Winput_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:includeFontPadding="true"
                android:paddingBottom="1dp"
                android:text="0.00"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:id="@+id/TV_Winput_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_wallet_point"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter"
            android:includeFontPadding="true"
            android:paddingStart="50dp"
            android:paddingBottom="20dp"
            android:text="0 pts"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Btn_topup"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="142dp"
            android:layout_height="62dp"
            android:background="@drawable/custom_button2"
            android:fontFamily="@font/inter"
            android:text="@string/top_up_wallet"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_walletReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/reminder_wallet"
            android:textColor="@color/Red"
            android:textSize="13sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/TV_title_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:drawableLeft="@drawable/ic_wallet"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:text="Wallet"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_History"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="234dp"
        android:layout_height="82dp"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button2"
        android:drawableEnd="@drawable/arrow_forward"
        android:drawablePadding="5dp"
        android:fontFamily="@font/inter"
        android:padding="5dp"
        android:text="@string/walltehistorybuttonlabel"
        android:textAlignment="textEnd"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:iconGravity="end"
        app:iconSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>