<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CLreceiptActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceiptActivity">

    <ImageView
        android:id="@+id/background3"
        android:layout_width="413dp"
        android:layout_height="728dp"
        android:alpha="0.3"
        android:background="#ffffff"
        android:scaleType="fitCenter"
        android:src="@drawable/backgroundjomride"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV_appreciation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="@font/inter"
        android:text="Thank you for your ride"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/TV_Apoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginEnd="204dp"
        android:fontFamily="@font/inter"
        android:text="0 pts"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/TV_Atotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="RM 0.00"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="50dp"
        android:background="@color/verDarkCyan"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        />

    <ImageView
        android:id="@+id/IV_AScooterMan"
        android:layout_width="105dp"
        android:layout_height="135dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187"
        app:srcCompat="@drawable/scooter_image" />

    <LinearLayout
        android:id="@+id/LL_ArideList"
        android:layout_width="376dp"
        android:layout_height="426dp"
        android:layout_marginTop="130dp"
        android:background="#C1FFFFFF"
        android:orientation="vertical"
        android:paddingStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492">

        <TextView
            android:id="@+id/TV_Atitle_transportation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_popup_transport"
            android:drawablePadding="5dp"
            android:fontFamily="@font/inter"
            android:includeFontPadding="true"
            android:paddingTop="2dp"
            android:text="@string/popup_transportation_type"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_Ainput_tranport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:includeFontPadding="true"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="12dp"
            android:text="Transportation style"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TV_Atitle_Rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_popup_duration"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter"
            android:includeFontPadding="true"
            android:text="Rate"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_Ainput_rate"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:includeFontPadding="true"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="12dp"
            android:text="RM 0.00 /min"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TV_Atitle_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_popup_duration"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter"
            android:includeFontPadding="true"
            android:text="@string/popup_duration"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_Ainput_duration"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:includeFontPadding="true"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="12dp"
            android:text="0 min"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TV_Atitle_dist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_popup_distance"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter"
            android:text="@string/popup_distance"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_Ainput_dist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:includeFontPadding="true"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="12dp"
            android:text="0 km"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TV_Atitle_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_popup_flag"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter"
            android:text="@string/popup_startpoint"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_Ainput_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:includeFontPadding="true"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="12dp"
            android:text="Location"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TV_title_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_popup_flag"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter"
            android:text="@string/popup_endpoint"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_Ainput_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:includeFontPadding="true"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="12dp"
            android:text="Location"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/Btn_AProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button2"
        android:fontFamily="@font/inter"
        android:text="OK"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/TV_ADateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:fontFamily="@font/inter"
        android:gravity="center|top"
        android:text="Hello"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.632"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />


</androidx.constraintlayout.widget.ConstraintLayout>